--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -33,7 +33,7 @@
           <option value="13">Outside Central</option>
           <option value="14">Outside Poletral</option>
         </select>
-        <input hidden type="text" placeholder="Water Moisture Requirement" name="Year">
+        <input hidden type="text" placeholder="Water Moisture Requirement" style="text-align:middle"name="Year">
         <label for="Year">Water Moisture Requirement</label>
         <select placeholder="Water Moisture Requirement" name="Year" >
           <option value="-"></option>
@@ -51,40 +51,46 @@
       </form>
 </body>
 <style>
-  .dropbtn {
-    background-color: black;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: black;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  .dropdown:hover .dropbtn {background-color: black}
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #ffffff;
+  border: none;
+  color: #000000;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+  border-radius: 50px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
   </style>
       <ul hidden class="names">
         <!-- Loop through quotes -->
