--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -1,6 +1,7 @@
 <!-- index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,48 +51,7 @@
         <button type="submit">Submit</button>
       </form>
 </body>
-<style>
-.button {
-  display: inline-block;
-  border-radius: 4px;
-  background-color: #ffffff;
-  border: none;
-  color: #000000;
-  text-align: center;
-  font-size: 28px;
-  padding: 20px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
-  border-radius: 50px;
-}
 
-.button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-.button span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-.button:hover span {
-  padding-right: 25px;
-}
-
-.button:hover span:after {
-  opacity: 1;
-  right: 0;
-}
-  </style>
       <ul hidden class="names">
         <!-- Loop through quotes -->
         <% for(var i = 0; i < names.length; i++) {%>
