making a button to test css link

--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Automated Irrigation</h1>
-  
+  <button>dscjvbqiwebfvibweoufvb2weouqyvf</button>
 <h2>Option Settings</h2>
   <h3>Custom Options</h3>
     <form action="/names" method="POST">
