--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -14,9 +14,9 @@
   .button {
     display: inline-block;
     border-radius: 4px;
-    background-color: #ffffff;
+    background-color: #000000;
     border: none;
-    color: #000000;
+    color: #ffffff;
     text-align: center;
     font-size: 28px;
     padding: 20px;
