--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -9,49 +9,6 @@
 </head>
 <body>
   <h1>Automated Irrigation</h1>
-  <button class='button'>dscjvbqiwebfvibweoufvb2weouqyvf</button>
-  <style>
-  .button {
-    display: inline-block;
-    border-radius: 4px;
-    background-color: #000000;
-    border: none;
-    color: #ffffff;
-    text-align: center;
-    font-size: 28px;
-    padding: 20px;
-    width: 200px;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 5px;
-    border-radius: 50px;
-  }
-  
-  .button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-  }
-  
-  .button span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-  }
-  
-  .button:hover span {
-    padding-right: 25px;
-  }
-  
-  .button:hover span:after {
-    opacity: 1;
-    right: 0;
-  }
-  </style>
 <h2>Option Settings</h2>
   <h3>Custom Options</h3>
     <form action="/names" method="POST">
@@ -117,5 +74,52 @@
           </li>
         <% } %>
       </ul>
+
+      <style>
+        .button {
+          display: inline-block;
+          border-radius: 4px;
+          background-color: #000000;
+          border: none;
+          color: #ffffff;
+          text-align: center;
+          font-size: 28px;
+          padding: 20px;
+          width: 200px;
+          transition: all 0.5s;
+          cursor: pointer;
+          margin: 5px;
+          border-radius: 50px;
+        }
+        
+        .button span {
+          cursor: pointer;
+          display: inline-block;
+          position: relative;
+          transition: 0.5s;
+        }
+        
+        .button span:after {
+          content: '\00bb';
+          position: absolute;
+          opacity: 0;
+          top: 0;
+          right: -20px;
+          transition: 0.5s;
+        }
+        
+        .button:hover span {
+          padding-right: 25px;
+        }
+        
+        .button:hover span:after {
+          opacity: 1;
+          right: 0;
+        }
+        </style>
+        </head>
+        
+        <button class="button" style="vertical-align:middle"><span>Submit</span></button>
+        
       </head>
 </html>
