--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -14,7 +14,7 @@
     <form action="/names" method="POST">
         <input type="text" placeholder="Water Moisture Requirement" name="Firstname">
         <input type="text" placeholder="Water Pump Duration" name="Fullname">
-        <button type="submit">Submit</button>
+        <button class:'button' type="submit">Submit</button>
       </form>
 
       <h3>Preset Options</h3>
@@ -47,7 +47,7 @@
           <option value="14">Outside Poletral</option>
         </select>
 
-        <button type="submit">Submit</button>
+        <button class:'button' type="submit">Submit</button>
       </form>
 </body>
 
@@ -118,8 +118,5 @@
         }
         </style>
         </head>
-        
-        <button class="button" style="vertical-align:middle"><span>Submit</span></button>
-        
       </head>
 </html>
