fixing wrong symbols

--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -47,7 +47,7 @@
           <option value="14">Outside Poletral</option>
         </select>
 
-        <button class:'button' type="submit">Submit</button>
+        <button class="button" type="submit">Submit</button>
       </form>
 </body>
 
