--- a/views/button.html
+++ b/views/button.html
@@ -1,10 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
   
 .button {
   display: inline-block;
   border-radius: 4px;
-  background-color:#000000;
+  background-color: #000000;
   border: none;
-  color:  #ffffff;
+  color: #ffffff;
   text-align: center;
   font-size: 28px;
   padding: 20px;
@@ -36,21 +40,14 @@
 }
 
 .button:hover span:after {
-  opacity: 2;
+  opacity: 1;
   right: 0;
 }
 
-input {
-    border-radius: 60px;
-    background-position: center bottom;
-    background-repeat: repeat;
-    padding: 20px;
-    width: 400px;
-    height: 30px;
-    font-size: 24px;
-    }
-  body {
-  background-image: url("/pix/samples/bg1.gif");
-  background-position: 50% 50%;
-  background-repeat: repeat;
-}
+</style>
+</head>
+
+<button class="button" style="vertical-align:middle"><span>Submit</span></button>
+
+</body>
+</html>
