--- a/views/test.html
+++ b/views/test.html
@@ -75,6 +75,7 @@
           border-radius: 20px;
           box-sizing: border-box;
         }
+        input[type=text] a:hover {background-color: #ddd;}
         
         div {
           border-radius: 5px;
