--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -9,7 +9,7 @@
   <h1>Automated Irrigation</h1>
 <h2>Option Settings</h2>
   <h3>Custom Options</h3>
-    <form action="/names" method="POST">
+    <form action="/Moisture" method="POST">
         <input type="text" placeholder="Water Moisture Requirement" name="Firstname">
         <input type="text" placeholder="Water Pump Duration" name="Fullname">
         <p>
@@ -19,7 +19,7 @@
       </form>
 
       <h3>Preset Options</h3>
-      <form action="/names" method="POST">
+      <form action="/Moisture" method="POST">
         <p>
 
         </p>
@@ -41,26 +41,12 @@
      </form>
 </body>
 
-      <ul hidden class="names">
+      <ul hidden class="Moisture">
         <!-- Loop through quotes -->
-        <% for(var i = 0; i < names.length; i++) {%>
+        <% for(var i = 0; i < Moisture.length; i++) {%>
           <li class="House">
-            <!-- Output name from the iterated quote object -->
-            <span><%= names[i].House %></span>:
+            <span><%= Moisture[i].readings %></span>
             <!-- Output quote from the iterated quote object -->
-            <span><%= names[i].Sportcaterogy %></span>
-            <!-- Output quote from the iterated quote object -->
-            <span><%= names[i].Sport %></span>
-            <!-- Output quote from the iterated quote object -->
-            <span><%= names[i].Year %></span>
-            <!-- Output quote from the iterated quote object -->
-            <span><%= names[i].Firstname %></span>
-            <!-- Output quote from the iterated quote object -->
-            <span><%= names[i].Fullname %></span>
-            <!-- Output quote from the iterated quote object -->
-            <span><%= names[i].Tutorgroup %></span>
-            <!-- Output quote from the iterated quote object -->
-            <span><%= names[i].Points %></span>
           </li>
         <% } %>
       </ul>
