--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Databases/Index/Home</title>
 </head>
+<script src="dropdown.js"></script>
 <body>
   <h1>Automated Irrigation</h1>
 <h2>Option Settings</h2>
@@ -30,22 +31,22 @@
           <option value="9">Herbs</option>
           <option value="10">Catus</option>
           <option value="11">Houseplant</option>
-          <option value="12">Outside Equatoral</option>
-          <option value="13">Outside Central</option>
-          <option value="14">Outside Poletral</option>
+          <option value="12">Outside Equator</option>
+          <option value="14">Outside Pole</option>
         </select>
-        
-        <select placeholder="Water Pump Duration" name="pump" >
+        <select placeholder="Water Pump Duration" name="pump">
           <option value="-"></option>
           <option value="7">Succulents</option>
           <option value="8">Troplical</option>
           <option value="9">Herbs</option>
-          <option value="10">Catus</option>
-          <option value="11">Houseplant</option>
-          <option value="12">Outside Equatoral</option>
-          <option value="13">Outside Central</option>
-          <option value="14">Outside Poletral</option>
+          <option value="s"> Catus</option>
+          <option script="Succulents">Houseplant</option>
+          <option value="12">Outside Equator</option>
+          <option value="14">Outside Pole</option>
         </select>
+
+</script>
+        
 <p>
 
 </p>
