select from array with empty strings

--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -34,19 +34,19 @@
           <option value="12">Outside Equator</option>
           <option value="14">Outside Pole</option>
         </select>
+       
         <select placeholder="Water Pump Duration" name="pump">
           <option value="-"></option>
           <option value="7">Succulents</option>
           <option value="8">Troplical</option>
           <option value="9">Herbs</option>
-          <option value="s"> Catus</option>
-          <option script="Succulents">Houseplant</option>
+          <option value="12"> Catus</option>
+          <option value="15">Houseplant</option>
           <option value="12">Outside Equator</option>
           <option value="14">Outside Pole</option>
         </select>
-
 </script>
-        
+       <button id="sbutton">fdvdfv</button> 
 <p>
 
 </p>
