--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -46,12 +46,50 @@
           <option value="14">Outside Pole</option>
         </select>
 </script>
-       <button id="sbutton">fdvdfv</button> 
+       
 <p>
 
 </p>
         <button class="button" type="submit"><span>Submit</span></button>
      </form>
+     
+     
+     
+     
+     
+     
+     <form action="/Moisture" method="POST">
+      
+    <button id="sbutton">fdvdfv</button>
+    <script>
+    const arry = ["10", "20", 5, "40"];
+    const sbuttton = document.querySelector("#sbutton");
+
+
+    app.post("/action", (req, res) => {
+var userData = {
+    username: req.body.username,
+    password: req.body.password
+}
+
+sbutton.onclick = app.post("/action", (req, res) => {
+ var userData = {
+    soil.value = quoteArray[2];
+    pump: req.body,7;}
+
+      sbutton.onclick = function sresponse() {
+      pump.value = quoteArray[2];
+      soil.value = quoteArray[2];
+        } 
+          </script>
+    </form>
+
+
+
+
+
+
+    
 </body>
 
       <ul hidden class="Moisture">
