--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -20,76 +20,49 @@
         <button class="button" type="submit"><span>Submit</span></button>
       </form><!--Custom entry form finish-->
 
+<!--Preset entry form start-->
       <h3>Preset Options</h3>
-      <form action="/Moisture" method="POST">
-        <p>
-
-        </p>
-        <select placeholder="Water Moisture Requirement" name="soil">
-          <option value="-"></option>
-          <option value="7">Succulents</option>
-          <option value="8">Troplical</option>
-          <option value="9">Herbs</option>
-          <option value="10">Catus</option>
-          <option value="11">Houseplant</option>
-          <option value="12">Outside Equator</option>
-          <option value="14">Outside Pole</option>
-        </select>
-       
-        <select placeholder="Water Pump Duration" name="pump">
-          <option value="-"></option>
-          <option value="7">Succulents</option>
-          <option value="8">Troplical</option>
-          <option value="9">Herbs</option>
-          <option value="12"> Catus</option>
-          <option value="15">Houseplant</option>
-          <option value="12">Outside Equator</option>
-          <option value="14">Outside Pole</option>
-        </select>
-</script>
-       
-<p>
-
-</p>
-        <button class="button" type="submit"><span>Submit</span></button>
-     </form>
-     
-     
-     
-     
-     
-     
      <form>
-    <button id="sbutton">S</button>
+    <button id="sbutton">Su</button>
     <script>
-    const arry = ["10", "20", 5, "40"];
+    const Array = ["10", "20", 5, "40"];
     const sbuttton = document.querySelector("#sbutton");
 
-sbutton.onclick = function(){
     app.post("/Moisture", (req, res) => {
       pump.value = quoteArray[2];
       soil.value = quoteArray[2];
-        })}
+        })
           </script>
-    </form>
-
-
-
-
-
-
-    
+    </form><!--Preset entry form finish--> 
+    <form name="myForm" action="/action_page.php" method="get">
+  <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">Last name:</label>
+  <input type="text" id="lname" name="lname"><br><br>
+  <input type="button" onclick="formSubmit()" value="Send form data!">
+</form>
+<script>
+function formSubmit() {
+    document.forms["myForm"].submit();
+}
+</script>
 </body>
 
       <ul hidden class="Moisture">
         <!-- Loop through quotes -->
         <% for(var i = 0; i < Moisture.length; i++) {%>
-          <li class="House">
-            <span><%= Moisture[i].readings %></span>
+          <li class="soil">
+            <span><%= Moisture[i].soil %></span>
+            <!-- Output quote from the iterated quote object -->
+          </li>
+          <li class="pump">
+            <span><%= Moisture[i].pump %></span>
             <!-- Output quote from the iterated quote object -->
           </li>
         <% } %>
       </ul>
+
+      <!--CSS start-->
       <style>
         input[type=text], select {
           width: 50%;
@@ -147,8 +120,8 @@ sbutton.onclick = function(){
   opacity: 1;
   right: 0;
 }
-        </style>
-
+        </style><!--CSS finish-->
+        
         </head>
       </head>
 </html>
