--- a/views/indexc.ejs
+++ b/views/indexc.ejs
@@ -61,6 +61,13 @@
           border-radius: 20px;
           box-sizing: border-box;
         }
+        html { 
+          background: url(photo1.jpg) no-repeat center center fixed; 
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
+}
         
         div {
           border-radius: 5px;
