--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,34 +11,13 @@
   <h3>Custom Options</h3>
 
   <!--Custom entry form start-->
-    <form action="/Moisture" method="POST">
-        <input type="text" placeholder="Water Moisture Requirement" name="soil">
-        <input type="text" placeholder="Water Pump Duration" name="pump">
-        <p>
-
-        </p>
-        <select placeholder="Water Moisture Requirement" name="soil" >
-          <option value="-"></option>
-          <option value="7">Succulents</option>
-          <option value="8">Troplical</option>
-          <option value="9">Herbs</option>
-          <option value="10">Catus</option>
-          <option value="11">Houseplant</option>
-          <option value="12">Outside Equatoral</option>
-          <option value="13">Outside Central</option>
-          <option value="14">Outside Poletral</option>
-        </select>
-        <select placeholder="Water Moisture Requirement" name="pump" >
-          <option value="-"></option>
-          <option value="7">Succulents</option>
-          <option value="8">Troplical</option>
-          <option value="9">Herbs</option>
-          <option value="10">Catus</option>
-          <option value="11">Houseplant</option>
-          <option value="12">Outside Equatoral</option>
-          <option value="13">Outside Central</option>
-          <option value="14">Outside Poletral</option>
-        </select>
+    <form action="/Moisture">
+        <input id="soilid" type="text" placeholder="Water Moisture Requirement" name="soil">
+        <input id="pumpid" type="text" placeholder="Water Pump Duration" name="pump">
+        <script>
+        const soilupdate = document.querySelector("#soilid");
+        const pumpupdate = document.querySelector("#pumpid");
+        </script>
         <button class="button" type="submit"><span>Submit</span></button>
       </form><!--Custom entry form finish-->
 
