post update - changeing 'insertOne' to 'updateOne'

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
   <h3>Custom Options</h3>
 
   <!--Custom entry form start-->
-    <form action="/Moisture">
+ <form action="/Moisture" method="POST"> 
         <input id="soilid" type="text" placeholder="Water Moisture Requirement" name="soil">
         <input id="pumpid" type="text" placeholder="Water Pump Duration" name="pump">
         <script>
