trying to fix error 'cannot / GET'

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,19 +11,12 @@
   <h3>Custom Options</h3>
 
   <!--Custom entry form start-->
- <form action="/Moisture" method="POST"> 
-        <input id="soilid" type="text" placeholder="Water Moisture Requirement" name="soil">
-        <input id="pumpid" type="text" placeholder="Water Pump Duration" name="pump">
-        <script>
-        const soilupdate = document.querySelector("#soilid");
-        const pumpupdate = document.querySelector("#pumpid");
-        </script>
-        <button class="button" type="submit"><span>Submit</span></button>
-      </form><!--Custom entry form finish-->
-
-<!--Preset entry form start-->
-
-</script>
+ <form action="Moisture" method="POST"> 
+        <input type="text" placeholder="Water Moisture Requirement" name="soil">
+        <input type="text" placeholder="Water Pump Duration" name="pump">
+        <!--Custom entry form finish-->
+        <button class="button" type="submit"><span>Submit</span></button><!--submit form-->
+      </form>
 </body>
 
       <ul hidden class="Moisture">
