--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,20 @@
         <!--Custom entry form finish-->
         <button class="button" type="submit"><span>Submit</span></button><!--submit form-->
       </form>
+    
+      <h2> Data soil-pump </h2>
+
+      <ul class="Moisture">
+        <!-- Loop through quotes -->
+        <% for(var i = 0; i < Moisture.length; i++) {%>
+          <li class="Sustain">
+            <!-- Output name from the iterated quote object -->
+            <span><%= Moisture[i].soil %></span>:
+            <!-- Output quote from the iterated quote object -->
+            <span><%= Moisture[i].pump %></span>
+          </li>
+        <% } %>
+      </ul>
 </body>
 
       <!--CSS start-->
