--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,14 +11,13 @@
   <h3>Custom Options</h3>
 
   <!--Custom entry form start-->
- <form action="/Moisture" method="POST"> 
+ <form action="Moisture" method="POST"> 
         <input type="text" placeholder="Water Moisture Requirement" name="soil">
         <input type="text" placeholder="Water Pump Duration" name="pump">
         <!--Custom entry form finish-->
         <button class="button" type="submit"><span>Submit</span></button><!--submit form-->
       </form>
-    
-      <h2> Data soil-pump </h2>
+
 
 </body>
 
