--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,9 @@
 
       <!--CSS start-->
       <style>
+        body {
+          background-color: #702c2c;
+              }
         input[type=text], select {
           width: 50%;
           padding: 12px 20px;
@@ -74,6 +77,7 @@
   opacity: 1;
   right: 0;
 }
+
         </style><!--CSS finish-->
         
         </head>
