test img background

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,9 @@
       <!--CSS start-->
       <style>
         body {
-          background-color: #702c2c;
+          background-image: url("http://wallpapercave.com/wp/nTwzv3B.jpg");
               }
+              
         input[type=text], select {
           width: 50%;
           padding: 12px 20px;
