--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,15 +24,15 @@
       <!--CSS start-->
       <style>
         body {
-          background-image: url("http://wallpapercave.com/wp/nTwzv3B.jpg");
+          background-image: url("https://images.unsplash.com/photo-1459664018906-085c36f472af?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+          object-fit: contain;
               }
-              
+
         input[type=text], select {
           width: 50%;
           padding: 12px 20px;
           margin: 8px 0;
           display: inline-block;
-          border: 1px solid #ccc;
           border-radius: 20px;
           box-sizing: border-box;
         }
