--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,8 @@
       <!--CSS start-->
       <style>
         body {
-          background-image: url("https://images.unsplash.com/photo-1459664018906-085c36f472af?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
-          object-fit: contain;
+          background-image: url("https://images.unsplash.com/photo-1446292532430-3e76f6ab6444?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1104&q=80");
+          background-size: cover;
               }
 
         input[type=text], select {
