trying out code to light up an LED on rasp pi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,9 +24,11 @@
       <!--CSS start-->
       <style>
         body {
-          background-image: url("https://images.unsplash.com/photo-1513682322455-ea8b2d81d418?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDZ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60");
+          background-image: url("https://images.unsplash.com/photo-1513682322455-ea8b2d81d418?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=633&q=80");
           background-size: cover;
               }
+      placeholder-shown{
+              background-color: white}
 
         input[type=text], select {
           width: 50%;
