navbar and final background

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,28 @@
     <meta charset="UTF-8" content="width=device-width, initial-scale=1">
     <title>Databases/Index/Home</title>
 </head>
-<body>
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+<body style="height:1500px">
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  <a class="navbar-brand" href="#">Logo</a>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+  </ul>
+</nav>
+
+<div class="container-fluid" style="margin-top:80px">
   <h1>Automated Irrigation</h1>
 <h2>Option Settings</h2>
   <h3>Custom Options</h3>
@@ -18,13 +39,13 @@
         <button class="button" type="submit"><span>Submit</span></button><!--submit form-->
       </form>
 
-
+    </div>
 </body>
 
       <!--CSS start-->
       <style>
         body {
-          background-image: url("https://images.unsplash.com/photo-1513682322455-ea8b2d81d418?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=633&q=80");
+          background-image: url("https://cdn.discordapp.com/attachments/672724997185470477/858844236690096188/web_background.png");
           background-size: cover;
               }
       placeholder-shown{
