--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" content="width=device-width, initial-scale=1">
     <title>Databases/Index/Home</title>
 </head>
-<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -18,7 +17,10 @@
   <a class="navbar-brand" href="#">Logo</a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" href="preset">Preset Settings</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="custom">Custom Settings</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
