--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,30 +5,8 @@
     <meta charset="UTF-8" content="width=device-width, initial-scale=1">
     <title>Databases/Index/Home</title>
 </head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</head>
-<body style="height:1500px">
-
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-  <a class="navbar-brand" href="#">Logo</a>
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="preset">Preset Settings</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="custom">Custom Settings</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-  </ul>
-</nav>
-
-<div class="container-fluid" style="margin-top:80px">
+<body>
+  <img ult="logo.png" width="200" height="240">
   <h1>Automated Irrigation</h1>
 <h2>Option Settings</h2>
   <h3>Custom Options</h3>
@@ -41,7 +19,7 @@
         <button class="button" type="submit"><span>Submit</span></button><!--submit form-->
       </form>
 
-    </div>
+
 </body>
 
       <!--CSS start-->
