--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <title>Databases/Index/Home</title>
 </head>
 <body>
-  <img ult="https://cdn.discordapp.com/attachments/672724997185470477/858877345318043659/v1wlkf7l.pnglogo.png" width="200" height="240">
+  <img src="https://cdn.discordapp.com/attachments/672724997185470477/858877345318043659/v1wlkf7l.pnglogo.png" width="200" height="240">
   <h1>Automated Irrigation</h1>
 <h2>Option Settings</h2>
   <h3>Custom Options</h3>
