clarifying measurement type

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,8 @@
 
   <!--Custom entry form start-->
  <form action="Moisture" method="POST"> 
-        <input type="text" placeholder="Water Moisture Requirement" name="soil">
-        <input type="text" placeholder="Water Pump Duration" name="pump">
+        <input type="text" placeholder="Water Moisture Requirement [Voltage Resistance]" name="soil">
+        <input type="text" placeholder="Water Pump Duration [Seconds]" name="pump">
         <!--Custom entry form finish-->
         <button class="button" type="submit"><span>Submit</span></button><!--submit form-->
       </form>
