impliment a dropdwon menu

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,14 @@
 
   <!--Custom entry form start-->
  <form action="Moisture" method="POST"> 
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown</button>
+    <div class="dropdown-content"></div>
+      <option value=””>option1</option>
+      <option value=””>option2</option>
+      <option value=””>option3</option>
+      <option value=””>option3</option>
+    </div>
         <input type="text" placeholder="Water Moisture Requirement [Voltage Resistance]" name="soil">
         <input type="text" placeholder="Water Pump Duration [Seconds]" name="pump">
         <!--Custom entry form finish-->
