--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,36 +8,52 @@
 <body>
   <h1>Automated Irrigation</h1>
 <h2>Option Settings</h2>
-  <form action="Moisture" method="POST"> 
-  <label for="pump">Pump</label>
-        <select placeholder="Water Pump Duration" name="pump">
-          <option value="-"></option>
-          <option value="7">1</option>
-          <option value="8">2</option>
-          <option value="9">3</option>
-          <option value="10">4</option>
-          <option value="11">5</option>
-          <option value="12">6</option>
-          <option value="13">7</option>
-        </select>
-        <label for="soil">Soil</label>
-        <select placeholder="Water Moisture Requirement" name="soil">
-          <option value="-"></option>
-          <option value="7">1</option>
-          <option value="8">2</option>
-          <option value="9">3</option>
-          <option value="10">4</option>
-          <option value="11">5</option>
-          <option value="12">6</option>
-          <option value="13">7</option>
-        </select>
+<form action="Moisture" method="POST"> 
 
-        <h3>Custom Options</h3>
-        <input type="text" placeholder="Water Moisture Requirement [Voltage Resistance]" name="soil">
-        <input type="text" placeholder="Water Pump Duration [Seconds]" name="pump">
-        <!--Custom entry form finish-->
-        <button class="button" type="submit"><span>Submit</span></button><!--submit form-->
-      </form>
+  <label for="pump">Pump</label>
+    <select placeholder="Water Pump Duration" name="pump">
+      <option value="-"></option>
+      <option value="7">1</option>
+      <option value="8">2</option>
+      <option value="9">3</option>
+      <option value="10">4</option>
+      <option value="11">5</option>
+      <option value="12">6</option>
+      <option value="13">7</option>
+    </select>
+
+  <label for="soil">Soil</label>
+    <select placeholder="Water Moisture Requirement" name="soil">
+      <option value="-"></option>
+      <option value="7">1</option>
+      <option value="8">2</option>
+      <option value="9">3</option>
+      <option value="10">4</option>
+      <option value="11">5</option>
+      <option value="12">6</option>
+      <option value="13">7</option>
+    </select>
+
+  <section>
+    <input id="hide" type="text" placeholder="Water Moisture Requirement [Voltage Resistance]" name="soil">
+    <input id="hide" type="text" placeholder="Water Pump Duration [Seconds]" name="pump">
+    <button1 id="custom">Custom Options</button1>
+      <script>
+      const hide = document.querySelector("#hide");
+      const custom = document.querySelector("#custom");
+      custom.addEventListener("click", Custom);
+      function Custom (){
+        if (hide.style.display === "none") {
+            hide.style.display = "block";
+        } else {
+            hide.style.display = "none";
+        }}
+      </script>
+  </section>
+  
+  <button class="button" type="submit"><span>Submit</span></button><!--submit form-->
+
+</form>
 
 
 </body>
