--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,8 +35,8 @@
     </select>
 
   <section>
-    <input id="hide" type="text" placeholder="Water Moisture Requirement [Voltage Resistance]" name="soil">
-    <input id="hide" type="text" placeholder="Water Pump Duration [Seconds]" name="pump">
+    <input id="hide" type="text" placeholder="Water Moisture Requirement [Voltage Resistance] e.g. 1.600" name="soil">
+    <input id="hide" type="text" placeholder="Water Pump Duration [Seconds] e.g. 6000" name="pump">
     <button1 id="custom">Custom Options</button1>
       <script>
       const hide = document.querySelector("#hide");
@@ -117,6 +117,20 @@
   opacity: 1;
   right: 0;
 }
+
+button1 {
+      padding: 8px 8px;
+      font-size: 14px;
+      text-align: center;
+      cursor: pointer;
+      outline:#333300;
+      border:#333300;
+      color: #e9e9a7;
+      border-radius: 10px;}  
+  
+button1:hover {
+      background-color: #535300;
+      border-radius: 10px;}
 
         </style><!--CSS finish-->
         
